--- a/quartz/styles/variables.scss
+++ b/quartz/styles/variables.scss
@@ -16,10 +16,10 @@
   --text: var(--dark);
   --rose: var(--secondary);
   --love: var(--tertiary);
-  --gold: #ea9d34;
-  --pine: #286983;
-  --foam: #56949f;
-  --iris: #907aa9;
+  --gold: rgba(234, 157, 52, 1);
+  --pine: rgba(40, 105, 131, 1);
+  --foam: rgba(86, 148, 159, 1);
+  --iris: rgba(144, 122, 169, 1);
 }
 
 /**
